src/objects/National_Opp_Stage_Task_Email__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Task_for_Account_Strategist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Task for Account Strategist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Task_for_Sales_Dev_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Task for Sales Dev Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Task_for_Sales_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Task for Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Account_Strategist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Account Strategist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sales_Dev_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sales Dev Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sales_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_for_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate for RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_for_ThoughtStarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate for ThoughtStarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>National Opp Stage Task Email</label>
</CustomObject>